# insurance-survival

./: CHANGELOG.md  README.md  pyproject.toml  run_tests_databricks.py
.github/workflows/: tests.yml
benchmarks/: benchmark.py  run_benchmark_databricks.py
notebooks/: 01_competing_risks_demo.py  benchmark.py  insurance_cure_demo.py  insurance_recurrent_demo.py  insurance_survival_demo.py
src/insurance_survival/: __init__.py  _cure_legacy.py  _utils.py  clv.py  cure.py  lapse_table.py  mlflow_wrapper.py  transform.py
src/insurance_survival/competing_risks/: __init__.py  cif.py  datasets.py  fine_gray.py  gray_test.py  metrics.py  plots.py
src/insurance_survival/cure/: __init__.py  _base.py  _em.py  cox.py  diagnostics.py  lognormal.py  promotion_time.py  simulate.py  weibull.py
src/insurance_survival/recurrent/: __init__.py  data.py  frailty.py  joint.py  models.py  report.py  simulate.py
tests/: competing_risks_test_cif.py  competing_risks_test_datasets.py  competing_risks_test_fine_gray.py  competing_risks_test_gray_test.py  competing_risks_test_integration.py  competing_risks_test_metrics.py  competing_risks_test_plots.py  conftest.py  cure_test_cox_model.py  cure_test_diagnostics.py  cure_test_em.py  cure_test_integration.py  cure_test_lognormal_model.py  cure_test_promotion_time.py  cure_test_simulate.py  cure_test_weibull_model.py  recurrent_test_data.py  recurrent_test_frailty.py  recurrent_test_integration.py  recurrent_test_joint.py  recurrent_test_models.py  recurrent_test_report.py  recurrent_test_simulate.py  test_bug_fixes_batch3.py  test_clv.py  test_cure.py  test_integration.py  test_lapse_table.py  test_mlflow_wrapper.py  test_transform.py
